--- a/resources/styles.css
+++ b/resources/styles.css
@@ -19,8 +19,12 @@ textarea {
 .light-item      { x: 0; y: 0; width: 100%; height: 33%; }
 .item-footer     { x: 0; y: 0; width: 100%; height: 20; }
 
-.tile-divider-bottom {
+#tile-divider-bottom {
   fill: grey;
+}
+
+#tile-strikethrough {
+  fill: white;
 }
 
 .status {
